--- a/nkorg/polls/config/templates/result_footer.html
+++ b/nkorg/polls/config/templates/result_footer.html
@@ -1,1 +1,1 @@
-</ul>Stimmen: {{poll_result_votesum}} - {{poll_button_tovote}}
+</ul>Stimmen: {{poll_result_votesum}}{if $hasVoted} - {{poll_button_tovote}}{/if}
