--- a/nkorg/polls/config/templates/archive_footer.html
+++ b/nkorg/polls/config/templates/archive_footer.html
@@ -1,1 +1,2 @@
-Stimmen: {{poll_archive_votesum}} - Opend: {{poll_start}} to {{poll_stop}}
+</ul>
+<p>Stimmen: {{poll_archive_votesum}} - Opend: {{poll_start}} to {{poll_stop}}</p>
